src/tests/errors/lexing/test02.cmp
program main 
begin
    var x : int_  (* identifiers cannot end in underscore *)
end 